# my-rust-os

./: Cargo.toml  Makefile  README.md  base.json  boot.asm  build.rs  i686-my_rust_os.json  linker.ld  multiboot_header.asm
.cargo/: config.toml
asm/: boot.asm
grub/: grub.cfg
isofiles/boot/: kernel.elf
isofiles/boot/grub/: grub.cfg
src/: lib.rs  main.rs  vga_buffer.rs
src/game/: event.rs  mod.rs  table.rs
src/interrupts/: keyboard.rs  mod.rs
src/vga/: mod.rs
