[package]
name = "my_text_os"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14.2"
pc-keyboard = "0.7.0"
# 빌드 도구가 바이오스 부팅용 마스터 부트 레코드(MBR)를 생성할 때 쓰는 핵심 크레이트
bootloader = "0.9.23" 

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
